--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "devDependencies": {
     "gh-pages": "^4.0.0"
   },
-  "homepage": "http://Wantonfury.github.io/cv-application"
+  "homepage": "http://wantonfury.github.io/cv-application"
 }
